Fix sticky hover on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -106,9 +106,11 @@ main {
   cursor: pointer;
 }
 
-.btn:hover {
-  transition: transform 200ms;
-  transform: scale(1.2);
+@media (hover: hover) {
+  .btn:hover {
+    transition: transform 200ms;
+    transform: scale(1.2);
+  }
 }
 
 .btn:active {
